[package]
name    = "arbor-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arbor-api"
path = "src/main.rs"

[dependencies]
arbor-common     = { path = "../arbor-common" }
arbor-controller = { path = "../arbor-controller" }

tokio             = { workspace = true }
axum              = { workspace = true }
axum-extra        = { workspace = true }
tower             = { workspace = true }
tower-http        = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
uuid              = { workspace = true }
chrono            = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx              = { workspace = true }
config            = { workspace = true }
dotenvy           = { workspace = true }
futures           = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-vsock       = { workspace = true }
bytes             = { workspace = true }
