[package]
name    = "arbor-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
arbor-common = { path = "../arbor-common" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
sqlx        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
futures     = { workspace = true }
rand        = { workspace = true }
hyper       = { workspace = true }
hyper-util  = { workspace = true }
bytes       = { workspace = true }
http-body-util = "0.1"
