[package]
name    = "arbor-egress-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arbor-egress-proxy"
path = "src/main.rs"

[dependencies]
arbor-common = { path = "../arbor-common" }

tokio        = { workspace = true }
hyper        = { workspace = true }
hyper-util   = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
parking_lot  = { workspace = true }
uuid         = { workspace = true }
dotenvy      = { workspace = true }
config       = { workspace = true }
http-body-util = "0.1"

[lib]
name = "arbor_egress_proxy"
path = "src/lib.rs"
