[package]
name    = "arbor-runner-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arbor-runner-agent"
path = "src/main.rs"

[dependencies]
arbor-common = { path = "../arbor-common" }

tokio        = { workspace = true }
tokio-util   = { workspace = true }
axum         = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
futures      = { workspace = true }
bytes        = { workspace = true }
parking_lot  = { workspace = true }
tokio-vsock  = { workspace = true }
portable-pty = { workspace = true }
config       = { workspace = true }
dotenvy      = { workspace = true }
nix          = { workspace = true }
rand         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
hyper        = { workspace = true }
hyper-util   = { workspace = true }
http-body-util = "0.1"
libc           = "0.2"
