[package]
name    = "arbor-snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
arbor-common = { path = "../arbor-common" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
object_store = { version = "0.7.1" }
